# gp_plotter

./: CMakeLists.txt  package.xml  readme.md  setup.py
scripts/: gp_plot.py
src/gp_plotter/: GPutil.py  __init__.py
srv/: AddPoint.srv  CloneMesh.srv  SetHyp.srv  SetPrior.srv
