<?xml version="1.0"?>
<package format="2">
  <name>gp_plotter</name>
  <version>0.0.0</version>
  <description>The gp_plotter package</description>

  <maintainer email="a.a.bonzini@qmul.ac.uk">A. Bonzini</maintainer>

  <license>Apache 2.0</license>

    <build_depend>message_generation</build_depend>

    <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
